fix distorted slider using object-fit:cover

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
 .navbar{
   margin-bottom: 0px;
 }
+.slider-img{
+  object-fit:cover;
+}
